<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label Name -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_item_name"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/hint_item_name"
            android:inputType="textCapWords"
            android:paddingStart="4dp"
            android:paddingEnd="4dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <!-- Label quantity -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

            <Button
                android:id="@+id/decrease"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="-" />

            <EditText
                android:id="@+id/edit_item_quantity"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="16sp"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/increase"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="+" />
        </LinearLayout>
    </LinearLayout>

    <!-- Price  -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_item_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_price"
                android:inputType="number" />

            <!-- Unit for price (€) -->
            <TextView
                android:id="@+id/label_price_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_item_price"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:background="@color/colorPrimary"
                android:textColorHint="@android:color/white"
                android:id="@+id/add_photo_button"
                android:onClick="openImageSelector"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_gallery"
                android:padding="14dp"
                android:hint="@string/add_a_photo"
                android:layout_marginEnd="8dp"/>
            <Button
                android:background="@color/colorPrimary"
                android:textColorHint="@android:color/white"
                android:id="@+id/take_photo_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="takePicture"
                android:drawableStart="@drawable/ic_photo_camera"
                android:padding="14dp"
                android:layout_height="match_parent"
                android:hint="@string/take_a_photo"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
